--- a/.github/workflows/trufflehog.yml
+++ b/.github/workflows/trufflehog.yml
@@ -19,4 +19,4 @@ jobs:
         run: pip install trufflehog
 
       - name: Run TruffleHog
-        run: trufflehog filesystem . --regex --entropy=False
+        run: trufflehog --json --no-update filesystem --entropy=false --max_depth=50 .
